--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
+  <link rel="shortcut icon" href=./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
   <!--
